changed css colors

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <p>Total</p>
                 <p class="totalprice">$ 0.00</p>
             </div>
-            <button class="buynowbutton" onclick="openDialog()">Proceed to checkout</button>
+            <button class="buynowbutton" onclick="checkout()">Proceed to checkout</button>
         </section>
     </section>
 
