--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         </section>
     </aside>
 
-    <nav class="topnavbar" id="topnavbar">
+    <nav class="topnavbar topnav_closed" id="topnavbar">
         <div class="topnavbardiv">
             <article class="topnavbararticles">
                 <div class="navimageswrapper"><img class="navbarimages" src="./img/images/voucher.jpg"
